Fix bug in the representing drop down button

--- a/index.css
+++ b/index.css
@@ -138,3 +138,6 @@ input:focus::placeholder {
     font-size: 15px !important;
   }
 }
+div .dropdown-btn:active i{
+  display: block !important;
+}
