--- a/index.css
+++ b/index.css
@@ -86,7 +86,15 @@ input:focus::placeholder {
   margin-top: -5px;
   margin-left: -5px;
 }
+.humberger-circle-color{
+  box-shadow: rgba(255, 255, 255, 0.2) 0px 1px 3px, rgba(240, 230, 140, 0.24) 0px 1px 2px;
+  background-color: #fac431;
+}
+.humberger-icons-color{
+  color: #070000 !important;
+}
 @media (max-width: 767px) {
+
   .custom-navbar {
     display: none !important;
   }
